first-terraform-aws.tf
terraform {
  required_providers {
    aws = {
      source = "hashicorp/aws"
      version = "5.31.0"
    }
  }
}

provider "aws" {
  # Configuration options
  region = "ap-southeast-1"
  access_key = "AKIASHYA67DDLNQMIGVD"
  secret_key = "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"
}

#test variable 
variable "subnet_prefix" {
  description = "cidr block for the subnet"

}

# 1. Create VPC

resource "aws_vpc" "test-vpc"{

  cidr_block = "10.0.0.0/16"
  tags = {
    Name = "sample"
  }
}

# 2. Create Internet Gateway

resource "aws_internet_gateway" "gw" {
  vpc_id = aws_vpc.test-vpc.id
}

# 3. Create Custom Route Table
resource "aws_route_table" "rt"{
  
  vpc_id = aws_vpc.test-vpc.id

  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = aws_internet_gateway.gw.id
  }

  route {
    ipv6_cidr_block        = "::/0"
    gateway_id             = aws_internet_gateway.gw.id
  }

  tags = {
    Name = "prod-rt"
  }

}

# 4. Create subnet

resource "aws_subnet" "subnet-1"{
  vpc_id = aws_vpc.test-vpc.id
  cidr_block = "10.0.1.0/24"
  availability_zone = "ap-southeast-1a"

  tags = {
    Name = "prod-subnet"
  }
}

# 5. Associate subnet with route table
resource "aws_route_table_association" "rta" {
  subnet_id       = aws_subnet.subnet-1.id
  route_table_id  = aws_route_table.rt.id
}

# 6. Create Security Group to allow port 22, 80, 443
resource "aws_security_group" "sg_web" {
  name        = "allow_web_traffic"
  description = "Allow WEB inbound traffic"
  vpc_id      = aws_vpc.test-vpc.id

  ingress {
    description      = "HTTPS from VPC"
    from_port        = 443
    to_port          = 443
    protocol         = "tcp" 
    cidr_blocks      = ["0.0.0.0/0"]
    ipv6_cidr_blocks = ["::/0"]
  }

  ingress {
    description      = "HTTP from VPC"
    from_port        = 80
    to_port          = 80
    protocol         = "tcp" 
    cidr_blocks      = ["0.0.0.0/0"]
    ipv6_cidr_blocks = ["::/0"]
  }

  ingress {
    description      = "SSH from VPC"
    from_port        = 22
    to_port          = 22
    protocol         = "tcp" 
    cidr_blocks      = ["0.0.0.0/0"]
    ipv6_cidr_blocks = ["::/0"]
  }

  egress {
    from_port        = 0
    to_port          = 0
    protocol         = "-1"
    cidr_blocks      = ["0.0.0.0/0"]
    ipv6_cidr_blocks = ["::/0"]
  }

  tags = {
    Name = "allow_web"
  }
}

#7 Create a network interface with an IP in the subnet that was created in step 4
resource "aws_network_interface" "web-server" {
  subnet_id       = aws_subnet.subnet-1.id
  private_ips     = ["10.0.1.50"]
  security_groups = [aws_security_group.sg_web.id]

}

#8. Assign an elastic IP  to the network interface created in step 7
resource "aws_eip" "one" {
  domain                    = "vpc"
  network_interface         = aws_network_interface.web-server.id
  associate_with_private_ip = "10.0.1.50"
  depends_on                = [aws_internet_gateway.gw]
}

output "server_public_ip" {
  value = aws_eip.one.public_ip
}

# 9. Create Ubuntu server and install/update apache2

resource "aws_instance" "web-instance" {
  ami = "ami-0fa377108253bf620"
  instance_type = "t2.micro"
  availability_zone = "ap-southeast-1a"
  key_name = "main-key"

  network_interface {
    device_index = 0
    network_interface_id = aws_network_interface.web-server.id
    
  }

  user_data = <<-EOF
              #!/bin/bash
              sudo apt update -y
              sudo apt install apache2 -y
              sudo systemctl start apache2
              sudo bash -c 'echo your every first web server > /var/www/html/index.html'
              EOF
  
  tags = {
    Name = "Apache"
  }
}

output "server_private_ip" {
  value = aws_instance.web-instance.private_ip
}

output "server_id" {
  value = aws_instance.web-instance.id
}
